3-SSL-Connection-with-Bookinfo/3-ratings.yaml
##################################################################################################
# Ratings service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: bookinfo
  labels:
    app: ratings
    service: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  namespace: bookinfo
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
      annotations:

        # sidecar.istio.io/auth-mode: MUTUAL
        # sidecar.istio.io/listenPort: "9080"
        # sidecar.istio.io/listenTLS: "9080"
        # sidecar.istio.io/tlsMode: ISTIO_MUTUAL
        # sidecar.istio.io/cert-chain: /etc/certs/tls.crt
        # sidecar.istio.io/key: /etc/certs/tls.key
        # sidecar.istio.io/root-cert: /etc/certs/ca.crt
        sidecar.istio.io/userVolumeMount: '[{"name":"mywebapp-mtls-certs", "mountPath":"/etc/ssl/certs", "readonly":true}]'
        sidecar.istio.io/userVolume: '[{"name":"mywebapp-mtls-certs", "secret":{"secretName":"mywebapp-mtls-credential"}}]'

    spec:
      serviceAccountName: bookinfo-ratings
      containers:
      - name: ratings
        image: docker.io/istio/examples-bookinfo-ratings-v1:1.17.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
        volumeMounts:
        - name: mywebapp-mtls-certs
          mountPath: /etc/ssl/certs
          # readOnly: true
      volumes:
      - name: mywebapp-mtls-certs
        secret:
          secretName: mywebapp-mtls-credential
---
