3-SSL-Connection-with-Bookinfo/1-bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-ingress-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.bookinfo.com"
    - "myclient.bookinfo.com"
    tls:
      httpsRedirect: true # Sends 301 redirect for http requests
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - myclient.bookinfo.com
    tls:
      mode: SIMPLE
      credentialName: bookinfo-credential
      # Note: Both foo-com-public.pem and foo-com-privatekey.pem in Example 8-16 are long-lived certificates for foo.com 
      # such as you would get from a CA like Let’s Encrypt. 
      # Unfortunately, Istio doesn’t handle these types of certificates today, 
      # so you need to mount any certificates that a Gateway must serve into the workload’s filesystem. 
      # Also, note that we updated both the port and protocol to match.
      # mode: SIMPLE # Enables HTTPS on this port
      # serverCertificate: /etc/certs/foo-com-public.pem
      # privateKey: /etc/certs/foo-com-privatekey.pem
