3-SSL-Connection-with-Bookinfo/13-client-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-vs
  namespace: bookinfo
spec:
  hosts:
  - "myclient.bookinfo.com" # For this please make an entry in /etc/hosts
  gateways:
  - bookinfo-ingress-gateway
  http:
  - match:
    - uri:
        exact: /http
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ec2-3-125-207-155.eu-central-1.compute.amazonaws.com
        port:
          number: 80
  - match:
    - uri:
        exact: /https
    rewrite:
      uri: "/api/portfolio"
      # uri: "/api/portfolio?username=riteshbangal"
    route:
    - destination:
        host: app-gw.eintuition.net
        port:
          number: 443
        # subset: simple-tls-connection
  - match:
    - uri:
        exact: /mtls
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ec2-3-125-207-155.eu-central-1.compute.amazonaws.com
        port:
          number: 443
        # subset: mtls-connection
  
  # Folllowing one is just for redirection
  - match:
    - uri:
        exact: /app
    rewrite:
      uri: "/productpage"
    route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080
  - match:
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080
